# code-talk-reviwer

./: .env.example  .gitignore  .pre-commit-config.yaml  IMPLEMENTATION_SUMMARY.md  Makefile  README.md  README_WEBSOCKET_TEST.md  WEBSOCKET_CONNECTION_GUIDE.md  fix_service_account_scopes.py  get_api_key_instructions.py  pyproject.toml  quick_setup_and_test.py  requirements-dev.txt  requirements.txt  setup.py  test_real_audio.py  test_simple_audio.py  test_websocket_connection.py  test_with_api_key.py
.kiro/specs/voice-ai-coding-assistant/: design.md  requirements.md  tasks.md
docs/: GOOGLE_CLOUD_SETUP.md  claude-code.md  google-speech-api.md  strands.md
examples/: voice_orchestration_demo.py
scripts/: e2e_voice_test.py  list_audio_devices.py  orchestrator_voice_test.py  setup_environment.py  test_claude_code.py  test_strands_integration.py  test_text_to_audio_flow.py  test_tts_integration.py  test_voice_message.py
src/voice_ai_assistant/: __init__.py
src/voice_ai_assistant/agent/: __init__.py  strands_agent.py  tools.py
src/voice_ai_assistant/code/: __init__.py  repository_manager.py
src/voice_ai_assistant/config/: __init__.py  settings.py
src/voice_ai_assistant/orchestration/: __init__.py  flow_manager.py  orchestration_session.py  orchestrator_config.py  pipeline.py  voice_orchestrator.py
src/voice_ai_assistant/voice/: __init__.py  audio_io_manager.py  audio_stream.py  auth.py  gemini_tools.py  session_manager.py  tts_manager.py  vertex_client.py
tests/: README.md  __init__.py  test_agent_integration.py  test_claude_tool.py  test_end_to_end_pipeline.py  test_vertex_api_integration.py  test_vertex_auth_curl.py  test_voice_orchestration.py
tests/unit/: test_config.py  test_imports.py
